--- a/templates/docker-compose.yml.j2
+++ b/templates/docker-compose.yml.j2
@@ -83,7 +83,7 @@ services:
       - {{ coolify_app_volume }}/.env
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - {{ coolify_app_dir }}/dbdata:/bitnami/mongodb:rw
+      - {{ coolify_data_volume_mongo }}:/bitnami/mongodb:rw
     networks:
       - {{ _coolify_env.DOCKER_NETWORK }}
 
